# CFMMRouter-rs

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
examples/: arbitrage_example.rs
src/: cfmm.rs  lib.rs  objective.rs  router.rs  solvers.rs  types.rs
